<resources>

    <string name="app_name">IU-MSE-App</string>
    <string name="sender_name">RADIO SOICWAVE</string>

    <string name="placeholder">PLACEHOLDER</string>
    <string name="empty_placeholder"> </string>

    <!-- TODO: password ändern! -->
    <string name="keyStorePassword">password</string>
    <string name="serverDomain">"https://10.0.2.2:8080/"</string>

    <!-- port forwarding beachten! adb forward tcp:1234 tcp:1234 -->
    <string name="socketServerAdr">"10.0.2.2"</string>
    <string name="socketServerPrt">"1234"</string>

    <string name="audioStreamUrl">"https://wdr-1live-neufuerdensektor.icecastssl.wdr.de/wdr/1live/neufuerdensektor/mp3/128/stream.mp3"</string>

    <!-- login -->
    <string name="login_username">Benutzername</string>
    <string name="login_password">Passwort</string>
    <string name="login_normal">Anmelden</string>
    <string name="login_google">Mit Google anmelden</string>
    <string name="login_facebook">Mit Facebook anmelden</string>
    <string name="login_error">Fehler beim Login!</string>
    <string name="session_error">Session ungültig. Bitte neu anmelden!</string>
    <string name="login_register">registrieren</string>

    <!-- toast -->
    <string name="toast_play">Wiedergabe gestartet!</string>
    <string name="toast_pause">Wiedergabe gestoppt!</string>
    <string name="toast_submitted">erfolgreich abgestimmt!</string>

    <!-- toolbar -->
    <string name="tb_logout">Ausloggen</string>
    <string name="tb_home">Home</string>

    <!-- home -->
    <string name="home_voting">Song Voting</string>
    <string name="home_news">Nachrichten</string>
    <string name="home_chat">Chat</string>
    <string name="home_about">Info</string>

    <!-- vote -->
    <string name="vote_voting">Die Song Auswahl:</string>
    <string name="vote_error">Sie haben bereits abgestimmt!</string>
    <string name="vote_button">senden</string>

    <!-- news -->
    <string name="news_header">News:</string>

    <!-- chat -->
    <string name="chat_hint">Nachricht eingeben!</string>
    <string name="chat_Button">senden</string>
    <string name="you">Sie</string>

    <!-- history -->
    <string name="history_history">Gespielte Songs</string>

    <!-- info -->
    <string name="info_textfeld_name">Name:</string>
    <string name="info_textfeld_modul">Modul:</string>
    <string name="info_textfeld_version">Version:</string>
    <string name="info_name">Max Mustermann</string>
    <string name="info_module">DLBCSEMSE02_D</string>
    <string name="info_version">V.1.0a</string>


</resources>