<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="32dp"
        android:gravity="center">

        <ImageView
            android:layout_width="400dp"
            android:layout_height="200dp"
            android:layout_marginTop="-30dp"
            android:src="@mipmap/ic_banner_foreground"
            android:importantForAccessibility="no" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginUsernameTextEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginPasswordTextEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/loginNormalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_normal"
            android:textColor="@android:color/white"
            android:layout_marginTop="32dp"
            android:padding="16dp" />

        <Button
            android:id="@+id/loginGoogleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_google"
            android:backgroundTint="@color/grey"
            android:textColor="@android:color/white"
            android:layout_marginTop="8dp"
            android:padding="16dp" />

        <Button
            android:id="@+id/loginFacebookButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_facebook"
            android:backgroundTint="@color/grey"
            android:textColor="@android:color/white"
            android:layout_marginTop="8dp"
            android:padding="16dp"/>

        <TextView
            android:id="@+id/loginErrorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_error"
            android:padding="16dp"
            android:textColor="@color/error_red"
            android:textSize="12sp"
            android:gravity="center"
            android:visibility="invisible"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/loginRegisterTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_register"
            android:padding="16dp"
            android:textColor="@color/grey"
            android:textSize="12sp"
            android:gravity="center"
            android:layout_marginTop="16dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>