<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".activities.MainActivity">

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="360dp"
        android:layout_height="500dp"
        android:layout_margin="16dp"
        android:columnCount="2"
        android:rowCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/card1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/grey"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <ImageView
                    android:contentDescription="@string/empty_placeholder"
                    android:id="@+id/icon1"
                    android:paddingTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/vote_72" />

                <TextView
                    android:id="@+id/text1"
                    android:paddingTop="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/icon1"
                    android:layout_centerHorizontal="true"
                    android:text="@string/home_voting"
                    android:textColor="@color/white" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/grey"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <ImageView
                    android:contentDescription="@string/empty_placeholder"
                    android:id="@+id/icon2"
                    android:paddingTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/newspaper_72" />

                <TextView
                    android:id="@+id/text2"
                    android:paddingTop="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/icon2"
                    android:layout_centerHorizontal="true"
                    android:text="@string/home_news"
                    android:textColor="@color/white" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/grey"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <ImageView
                    android:contentDescription="@string/empty_placeholder"
                    android:id="@+id/icon3"
                    android:paddingTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/chat_72" />

                <TextView
                    android:id="@+id/text3"
                    android:paddingTop="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/icon3"
                    android:layout_centerHorizontal="true"
                    android:text="@string/home_chat"
                    android:textColor="@color/white" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/grey"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <ImageView
                    android:contentDescription="@string/empty_placeholder"
                    android:id="@+id/icon4"
                    android:paddingTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/history_72" />

                <TextView
                    android:id="@+id/text4"
                    android:paddingTop="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/icon4"
                    android:layout_centerHorizontal="true"
                    android:text="@string/history_history"
                    android:textColor="@color/white" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_columnSpan="2"
            android:id="@+id/card5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="0.5"
            android:layout_columnWeight="2"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/grey"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <ImageView
                    android:contentDescription="@string/empty_placeholder"
                    android:id="@+id/icon6"
                    android:paddingTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/info_72" />

                <TextView
                    android:id="@+id/text6"
                    android:paddingTop="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/icon6"
                    android:layout_centerHorizontal="true"
                    android:text="@string/home_about"
                    android:textColor="@color/white" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>